# TorrentClient

./: .gitignore  CMakeLists.txt  README.md  dark.qss  light.qss  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
common/: basesettings.h  category.h  dirs.h  file.h  metadatafetcher.cpp  metadatafetcher.h  peer.h  priority.h  settingsvalues.h  torrent.h  torrenthandle.cpp  torrenthandle.h  torrentinfo.h  tracker.h  utils.cpp  utils.h
controllers/: sessionmanager.cpp  sessionmanager.h
delegates/: fileitemdelegate.cpp  fileitemdelegate.h  fileprioritydelegate.cpp  fileprioritydelegate.h  filestatusdelegate.cpp  filestatusdelegate.h  torrentitemdelegate.cpp  torrentitemdelegate.h
dialogs/: addpeersdialog.cpp  addpeersdialog.h  addpeersdialog.ui  deletetorrentdialog.cpp  deletetorrentdialog.h  deletetorrentdialog.ui  loadmagnetdialog.cpp  loadmagnetdialog.h  managepeersdialog.cpp  managepeersdialog.h  savetorrentdialog.cpp  savetorrentdialog.h  savetorrentdialog.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  torrentsettingsdialog.cpp  torrentsettingsdialog.h  torrentsettingsdialog.ui
models/: filestablemodel.cpp  filestablemodel.h  filetreemodel.cpp  filetreemodel.h  filetreemodel.ui  peertablemodel.cpp  peertablemodel.h  torrent.h  torrentstablemodel.cpp  torrentstablemodel.h  trackertablemodel.cpp  trackertablemodel.h
proxy/: categorysortfilter.cpp  categorysortfilter.h
src/: main.cpp
src/core/controllers/: sessionmanager.cpp  sessionmanager.h
src/core/delegates/: fileitemdelegate.cpp  fileitemdelegate.h  fileprioritydelegate.cpp  fileprioritydelegate.h  filestatusdelegate.cpp  filestatusdelegate.h  torrentitemdelegate.cpp  torrentitemdelegate.h
src/core/filters/: categorysortfilter.cpp  categorysortfilter.h
src/core/models/: filetreemodel.cpp  filetreemodel.h  peertablemodel.cpp  peertablemodel.h  torrentstablemodel.cpp  torrentstablemodel.h  trackertablemodel.cpp  trackertablemodel.h
src/core/net/: metadatafetcher.cpp  metadatafetcher.h
src/core/utils/: dirs.h  file.h  priority.h  settingsvalues.h  torrenthandle.cpp  torrenthandle.h  utils.cpp  utils.h
src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/gui/dialogs/: addpeersdialog.cpp  addpeersdialog.h  deletetorrentdialog.cpp  deletetorrentdialog.h  loadmagnetdialog.cpp  loadmagnetdialog.h  loadmagnetdialog.ui  managepeersdialog.cpp  managepeersdialog.h  managepeersdialog.ui  savetorrentdialog.cpp  savetorrentdialog.h  savetorrentdialog.ui  settingsdialog.cpp  settingsdialog.h  torrentsettingsdialog.cpp  torrentsettingsdialog.h
src/gui/widgets/: advancedsettings.cpp  advancedsettings.h  advancedsettings.ui  applicationsettings.cpp  applicationsettings.h  basesettings.h  connectionsettings.cpp  connectionsettings.h  connectionsettings.ui  filelistwidget.cpp  filelistwidget.h  filelistwidget.ui  generalinfowidget.cpp  generalinfowidget.h  generalinfowidget.ui  peerswidget.cpp  peerswidget.h  peerswidget.ui  piecesbarwidget.cpp  piecesbarwidget.h  propertieswidget.cpp  propertieswidget.h  propertieswidget.ui  speedgraphwidget.cpp  speedgraphwidget.h  torrentsettings.cpp  torrentsettings.h  trackerswidget.cpp  trackerswidget.h
tests/: test_utils.cpp
widgets/: advancedsettings.cpp  advancedsettings.h  advancedsettings.ui  applicationsettings.cpp  applicationsettings.h  applicationsettings.ui  connectionsettings.cpp  connectionsettings.h  connectionsettings.ui  filelistwidget.cpp  filelistwidget.h  filelistwidget.ui  generalinfowidget.cpp  generalinfowidget.h  generalinfowidget.ui  peerswidget.cpp  peerswidget.h  piecesbarwidget.cpp  piecesbarwidget.h  piecesbarwidget.ui  propertieswidget.cpp  propertieswidget.h  propertieswidget.ui  speedgraphwidget.cpp  speedgraphwidget.h  speedgraphwidget.ui  torrentsettings.cpp  torrentsettings.h  torrentsettings.ui  torrentwidget.cpp  torrentwidget.h  torrentwidget.ui  trackerswidget.cpp  trackerswidget.h  trackerswidget.ui
